<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">证券新闻</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="fragment_news">要闻</string>
	<string name="fragment_report">研报</string>
	<string name="fragment_stock">新股</string>
	<string name="fragment_company">公司</string>
	
	<string name="passidcard">身份证号码</string>
	<string name="password">密码</string>
	<string name="code">附加码</string>
	<string name="settings_login">登录</string>
	
	
	<string name="check_internet">检查网络</string>
    <string name="fail_status">打开失败啦!</string>
    <string name="fail_status_desc">您可以检查网络状态后</string>
    <string name="fail_status_desc1">点击屏幕 重新加载.</string>
    <string name="sever_error">服务器出现异常,请稍后再试</string>
</resources>
